--- a/src/pages/overview/overview.module.css
+++ b/src/pages/overview/overview.module.css
@@ -1,7 +1,31 @@
 .containerOverview {
-  padding: 1.5rem;
-  margin: 1rem;
-  border-radius: 8px;
-  max-width: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  max-width: 1440px;
+  margin: 0 auto;
+}
 
+.wrapperCards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  width: 100%;
+}
+
+.wrapperProgress {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  width: 80%;
+  max-width: 860px;
+  background: linear-gradient(135deg, #20242D 0%, #1E2430 40%, #1a2a3a 70%);
+  border: 1px solid #3e4350;
+  border-radius: 8px;
+  margin: 1rem;
+}
+
+.wrapperProgress h2 {
+  color: #A98CFB;
+  margin: 1rem;
 }
